GNU tar NEWS - User visible changes. 2018-12-21
Please send GNU tar bug reports to <bug-tar@gnu.org>


version 1.30.90 (Git)

* Fix heap-buffer-overrun with --one-top-level.
Bug introduced with the addition of that option in 1.28.

* Support for zstd compression

New option '--zstd' instructs tar to use zstd as compression program.
When listing, extractng and comparing, zstd compressed archives are
recognized automatically.
When '-a' option is in effect, zstd compression is selected if the
destination archive name ends in '.zst' or '.tzst'.

* The -K option interacts properly with member names given in the command line

Names of members to extract can be specified along with the "-K NAME"
option. In this case, tar will extract NAME and those of named members
that appear in the archive after it, which is consistent with the
semantics of the option.

Previous versions of tar extracted NAME, those of named members that
appeared before it, and everything after it.


version 1.30 - Sergey Poznyakoff, 2017-12-17

* Member names containing '..' components are now skipped when extracting.

This fixes tar's behavior to match its documentation, and is a bit
safer when extracting untrusted archives over old files (an unsafe
practice that the tar manual has long recommended against).

* Report erroneous use of position-sensitive options.

During archive creation or update, tar keeps track of positional
options (see the manual, subsection 3.4.4 "Position-Sensitive
Options"), and reports those that had no effect.  For example, when
invoked as

   tar -cf a.tar . --exclude '*.o'

tar will create the archive, but will exit with status 2, having
issued the following error message

   tar: The following options were used after non-optional
   arguments in archive create or update mode.  These options are
   positional and affect only arguments that follow them.  Please,
   rearrange them properly.
   tar: --exclude '*.o' has no effect