@@ -1,4 +1,4 @@
-GNU tar NEWS - User visible changes. 2018-12-21
+GNU tar NEWS - User visible changes. 2018-12-27
 Please send GNU tar bug reports to <bug-tar@gnu.org>
 
 
@@ -24,6 +24,12 @@ semantics of the option.
 
 Previous versions of tar extracted NAME, those of named members that
 appeared before it, and everything after it.
+
+* Fix CVE-2018-20482
+
+When creating archives with the --sparse option, previous versions of
+tar would loop endlessly if a sparse file had been truncated while
+being archived.
 
 
 version 1.30 - Sergey Poznyakoff, 2017-12-17
